Working phonebook but it does not store the values, so you can't recover it

--- a/phonebook/CMakeLists.txt
+++ b/phonebook/CMakeLists.txt
@@ -19,6 +19,9 @@ set(PROJECT_SOURCES
         phonebook.cpp
         phonebook.h
         phonebook.ui
+        editdialog.cpp
+        editdialog.h
+        editdialog.ui
 )
 
 if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
